--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,90 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+}
+a {
+  text-decoration: none;
+}
+a {
+  color: blue;
+}
+img {
+  max-width: 100%;
+  height: auto;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.l-header {
+  height: 20px;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  column-gap: 10px;
+  border-bottom: 1px solid #ccc;
+}
+.l-header__link {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  column-gap: 5px;
+  color: #000;
+}
+.l-header__title {
+  font-size: inherit;
+}
+.l-header__logo {
+  height: 100%;
+}
+.l-header__version {
+  margin-left: auto;
+}
+
+.l-footer {
+  padding: 10px;
+  border-top: 1px solid #ccc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  row-gap: 10px;
+}
+.l-footer__link {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  column-gap: 5px;
+  color: #000;
+}
+.l-footer__logo {
+  height: 20px;
+}
+.l-footer__copyright {
+  color: #ccc;
+  font-size: 0.8em;
+}
+
+.l-top {
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
+.p-about {
+  display: flex;
+  flex-wrap: wrap;
+}
+.p-about__under-construction {
+  padding: 10px;
+  background: #ffe3e3;
+}
+.p-about__break {
+  flex-basis: 100%;
+}
+.p-about__roadmap {
+  flex-basis: 50%;
+}
+.p-about__done {
+  flex-basis: 50%;
+}
+
+.p-about__about {
+  padding: 10px;
+  background: #e3f8ff;
 }
