--- a/src/index.css
+++ b/src/index.css
@@ -147,6 +147,20 @@ img {
   width: 12em;
 }
 
+.c-log__processing {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  z-index: 999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @media screen and (min-width: 601px) {
   .u-sp {
     display: none;
