--- a/src/index.css
+++ b/src/index.css
@@ -174,6 +174,11 @@ img {
   align-items: center;
 }
 
+.p-map__map {
+  overflow-x: auto;
+  padding: 10px;
+}
+
 @media screen and (min-width: 601px) {
   .u-sp {
     display: none;
