--- a/src/index.css
+++ b/src/index.css
@@ -174,6 +174,17 @@ img {
   align-items: center;
 }
 
+.p-map {
+  background: #fffbf6;
+}
+.p-map--sticky {
+  position: sticky;
+  top: 0;
+}
+.p-map--sticky .p-map__title {
+  display: none;
+}
+
 .p-map__map {
   overflow-x: auto;
   position: relative;
@@ -184,8 +195,6 @@ img {
   transform: rotate(0);
 }
 
-.c-map-icon {
-}
 .c-map-icon__img {
   position: fixed;
   width: 40px;
