--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  overflow-y: scroll;
 }
 a {
   text-decoration: none;
@@ -199,6 +200,55 @@ img {
   position: fixed;
   width: 40px;
   height: 40px;
+}
+
+.p-station--last {
+  padding-bottom: var(--panel-height);
+  box-sizing: border-box;
+}
+
+.p-control {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  background: #f1f1f1;
+  height: var(--panel-height);
+  width: 100%;
+}
+.p-control__inner {
+  display: flex;
+  flex-wrap: nowrap;
+  height: 100%;
+  padding: 0;
+}
+.p-control__component {
+  border: 1px solid #ccc;
+  border-right: none;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  width: var(--panel-height);
+  justify-content: center;
+  user-select: none;
+}
+.p-control__component:last-child {
+  border-right: 1px solid #ccc;
+}
+.p-control__component--disabled {
+  opacity: 0.5;
+  pointer-events: none;
+}
+
+.p-control__component--range {
+  width: 100%;
+}
+.p-control__range {
+  width: 100%;
+}
+
+:root {
+  --panel-height: 30px;
 }
 
 @media screen and (min-width: 601px) {
