--- a/src/index.css
+++ b/src/index.css
@@ -226,6 +226,7 @@ img {
 
 .p-station__body {
   display: flex;
+  column-gap: 0.5em;
 }
 
 .p-station__left {
@@ -286,9 +287,22 @@ img {
   width: 100%;
 }
 
+.c-entities {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0.1em 0;
+  gap: var(--entity-gap);
+}
+
 .c-entity {
   display: flex;
   column-gap: 0.5em;
+  align-items: center;
+  padding: 0.5em;
+  border: 1px solid #000;
+  width: calc((100% + var(--entity-gap)) / 3 - var(--entity-gap));
+  max-width: 12.5em;
+  box-sizing: border-box;
 }
 
 .c-entity__label {
@@ -296,14 +310,9 @@ img {
   width: 5em;
 }
 
-.c-cards, .c-exhibits {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 0.5em 1em;
-}
-
 :root {
   --panel-height: 30px;
+  --entity-gap: 0.5em;
 }
 
 @media screen and (min-width: 601px) {
