--- a/src/index.css
+++ b/src/index.css
@@ -206,7 +206,7 @@ img {
   transform: scale(1, -1);
 }
 
-.c-map-icon__img {
+.c-map-icon {
   position: fixed;
   width: var(--icon-size);
   height: var(--icon-size);
