--- a/src/index.css
+++ b/src/index.css
@@ -419,7 +419,7 @@ img {
   align-items: center;
   padding: 0.5em;
   border: 1px solid #000;
-  width: 160px;
+  width: 162px;
   height: 42px;
   box-sizing: border-box;
   overflow: hidden;
@@ -443,14 +443,15 @@ img {
   width: 100%;
   height: 100%;
   background: #000;
-  opacity: 0.2;
+  opacity: 0.1;
 }
 
 .c-card__img {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -35%);
+  aspect-ratio: 1024 / 700;
   z-index: -1;
 }
 
@@ -461,6 +462,19 @@ img {
 .p-enemies {
   display: flex;
   gap: 0.5em;
+}
+
+.p-base-mana {
+  display: flex;
+}
+
+.c-base-mana {
+  position: relative;
+}
+.c-base-mana__unknown {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 :root {
