--- a/src/index.css
+++ b/src/index.css
@@ -92,6 +92,11 @@ img {
   padding-right: var(--padding-inner);
 }
 
+.l-log__inner {
+  display: flex;
+  flex-direction: column;
+}
+
 .p-about {
   display: flex;
   flex-wrap: wrap;
@@ -194,10 +199,6 @@ img {
   transform: rotate(0);
 }
 
-.p-map__inner--hidden {
-  visibility: hidden;
-}
-
 .c-act__title {
   position: absolute;
   top: 0;
@@ -206,22 +207,64 @@ img {
   font-size: 1.2em;
 }
 
-.p-map__holdings {
-  position: absolute;
+.p-holdings {
+  /* position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100%; */
+  min-height: 144px;
+  max-height: calc(100vh - var(--control-height));
   z-index: 1;
-  padding: 0.5em;
-  overflow-y: auto;
-  box-sizing: border-box;
+  border-bottom: #e9e9e9 1px solid;
+  box-shadow: 0 0.5em 0.5em -0.5em rgba(0, 0, 0, 0.25);
+  background: #fff;
+  display: flex;
+  flex-direction: column;
   --x: 1.5;
   --n: calc(2 * 1.5);
   --n-1: calc(var(--n) - 1);
   --entity-width: min(calc(300px / var(--x)), calc((100vw - var(--padding-inner) * 2 - var(--entity-column-gap) * var(--n-1) - var(--entity-border) * 2 * var(--n)) / var(--n)));
   --entity-height: calc(var(--entity-width) / 7.5);
   --entity-margin: calc(var(--entity-height) * 0.2);
+}
+.p-holdings__inner {
+  padding: 0.5em;
+  overflow-y: auto;
+  height: 100%;
+}
+.p-holdings__resizer {
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: 6px;
+  justify-self: flex-end;
+  cursor: row-resize;
+  resize: vertical;
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+.p-holdings__resizer::before, .p-holdings__resizer::after {
+  content: '';
+  border: solid #e9e9e9;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  position: absolute;
+}
+.p-holdings__resizer::before {
+  bottom: 2px;
+  transform: rotate(-135deg);
+}
+.p-holdings__resizer::after {
+  bottom: -15px;
+  transform: rotate(45deg);
+}
+.p-holdings__resizer:hover {
+  height: 3px;
+  background: #c1c3c5b4;
+}
+.p-holdings__resizer:hover::before, .p-holdings__resizer:hover::after {
+  display: none;
 }
 
 .p-map__svg {
