--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  overflow-y: hidden;
+  overflow-y: scroll;
 }
 a {
   text-decoration: none;
@@ -95,7 +95,6 @@ img {
 .l-log__inner {
   display: flex;
   flex-direction: column;
-  height: 100vh;
   padding: 0; 
 }
 
@@ -217,7 +216,6 @@ img {
   z-index: 999;
   min-height: 144px;
   max-height: calc(100vh - var(--control-height));
-  border-bottom: #e9e9e9 1px solid;
   box-shadow: 0 0.5em 0.5em -0.5em rgba(0, 0, 0, 0.25);
   background: #fff;
   display: flex;
@@ -244,30 +242,37 @@ img {
   position: relative;
   display: flex;
   justify-content: center;
+  touch-action: none;
+  height: 3px;
+  --color: #c1c3c5b4;
+  --visible: hidden;
+  background: var(--color);
 }
 .p-holdings__resizer::before, .p-holdings__resizer::after {
   content: '';
-  border: solid #e9e9e9;
+  border: 1px solid var(--color);
   border-width: 0 3px 3px 0;
   display: inline-block;
   padding: 3px;
   position: absolute;
   pointer-events: none;
+  visibility: var(--visible);
 }
 .p-holdings__resizer::before {
-  bottom: 2px;
+  top: -10px;
   transform: rotate(-135deg);
 }
 .p-holdings__resizer::after {
-  bottom: -15px;
+  bottom: -10px;
   transform: rotate(45deg);
 }
 .p-holdings__resizer:hover {
-  height: 3px;
-  background: #c1c3c5b4;
+  --color: green;
+  --visible: visible;
 }
-.p-holdings__resizer:hover::before, .p-holdings__resizer:hover::after {
-  visibility: hidden;
+.p-holdings__resizer:active {
+  --color: orange;
+  --visible: visible;
 }
 
 .p-map__svg {
@@ -308,9 +313,7 @@ img {
 
 .p-stations {
   margin-bottom: var(--control-height);
-  overflow-y: scroll;
   flex: 1;
-  position: relative;
 }
 .p-station {
   margin-bottom: 1em;
@@ -611,3 +614,9 @@ img {
     flex-basis: 100%;
   }
 }
+
+/* @supports (height: 100dvh) {
+  .l-log__inner  {
+    height: 100dvh;
+  }
+} */
