--- a/src/index.css
+++ b/src/index.css
@@ -207,10 +207,6 @@ img {
 }
 
 .p-holdings {
-  /* position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%; */
   position: sticky;
   top: 0;
   z-index: 999;
@@ -220,12 +216,6 @@ img {
   background: #fff;
   display: flex;
   flex-direction: column;
-  /* --x: 1.5;
-  --n: calc(2 * 1.5);
-  --n-1: calc(var(--n) - 1);
-  --entity-width: min(calc(300px / var(--x)), calc((100vw - var(--padding-inner) * 2 - var(--entity-column-gap) * var(--n-1) - var(--entity-border) * 2 * var(--n)) / var(--n)));
-  --entity-height: calc(var(--entity-width) / 7.5);
-  --entity-margin: calc(var(--entity-height) * 0.2); */
 }
 .p-holdings__inner {
   padding: 0.5em;
@@ -259,11 +249,11 @@ img {
   visibility: var(--visible);
 }
 .p-holdings__resizer:before {
-  top: -10px;
+  bottom: 100%;
   transform: rotate(-135deg);
 }
 .p-holdings__resizer:after {
-  bottom: -10px;
+  top: 100%;
   transform: rotate(45deg);
 }
 .p-holdings__resizer:hover {
@@ -563,7 +553,7 @@ html:lang(en) .c-entity__text {
 .c-card__text {
   z-index: 1;
   color: #fff;
-  text-shadow: 1px 1px 4px #000, -1px 1px 4px #000, -1px -1px 4px #000, 1px -1px 4px #000;
+  text-shadow: 1px 1px 2px #000, -1px 1px 2px #000, -1px -1px 2px #000, 1px -1px 2px #000;
 }
 .c-card--upgraded .c-card__text {
   color: palegreen;
@@ -609,6 +599,111 @@ html:lang(en) .c-entity__text {
   position: absolute;
   top: 0;
   left: 0;
+}
+
+.c-requests {
+  --dot-size: 30px;
+  --dot-border: 3px;
+  --dot-color: orange;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-auto-columns: var(--dot-size);
+  column-gap: var(--dot-size);
+}
+.c-request {
+  /* display: flex;
+  justify-content: center; */
+  position: relative;
+  display: contents;
+}
+.c-request__circle {
+  width: var(--dot-size);
+  height: var(--dot-size);
+  outline: var(--dot-border) solid var(--dot-color);
+  outline-offset: calc(var(--dot-border) * -1 );
+  border-radius: 50%;
+  z-index: 1;
+  position: relative;
+  grid-row: 2;
+}
+.c-request:not(:last-child) .c-request__circle:after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 100%;
+  width: 100%;
+  height: 2px;
+  background: var(--dot-color);
+  transform: translateY(-50%);
+}
+
+.c-request__dot {
+  width: 60%;
+  height: 60%;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.c-request__dot--active {
+  background: var(--dot-color);
+}
+
+.c-request-name {
+  white-space: nowrap;
+  grid-column: span 2;
+  display: grid;
+  grid-template-columns: subgrid;
+}
+html:lang(en) .c-request-name {
+  font-size: 0.8em;
+}
+.c-request:nth-child(2) .c-request-name {
+  grid-column: 2 / span 2;
+}
+.c-request:nth-child(odd) .c-request-name {
+  grid-row: 3;
+}
+.c-request:nth-child(even) .c-request-name {
+  grid-row: 1
+}
+
+.c-request:last-child .c-request-name {
+  grid-column: span 1;
+}
+
+.c-request-name__inner {
+  grid-column: span 1;
+  justify-self: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.c-request:first-child .c-request-name__inner {
+  /* justify-self: flex-start; */
+}
+.c-request:last-child .c-request-name__inner {
+  /* justify-self: flex-end; */
+}
+
+.c-request-name__arrow {
+  content: '';
+  border: 1px solid var(--dot-color);
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+}
+.c-request:nth-child(odd) .c-request-name__arrow {
+  transform: rotate(-135deg);
+  margin-top: 0.2em;
+  order: -1;
+}
+.c-request:nth-child(even) .c-request-name__arrow {
+  transform: rotate(45deg);
+  margin-bottom: 0.2em;
 }
 
 :root {
