--- a/src/index.css
+++ b/src/index.css
@@ -602,108 +602,79 @@ html:lang(en) .c-entity__text {
 }
 
 .c-requests {
-  --dot-size: 30px;
-  --dot-border: 3px;
+  --dot-size: 1.5em;
+  --dot-border: 1px;
   --dot-color: orange;
-  display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-auto-columns: var(--dot-size);
+  display: flex;
+  
   column-gap: var(--dot-size);
 }
 .c-request {
-  /* display: flex;
-  justify-content: center; */
-  position: relative;
-  display: contents;
-}
-.c-request__circle {
   width: var(--dot-size);
   height: var(--dot-size);
   outline: var(--dot-border) solid var(--dot-color);
   outline-offset: calc(var(--dot-border) * -1 );
   border-radius: 50%;
-  z-index: 1;
   position: relative;
-  grid-row: 2;
 }
-.c-request:not(:last-child) .c-request__circle:after {
+.c-request:not(:last-child):after {
   content: '';
   display: block;
   position: absolute;
   top: 50%;
   left: 100%;
   width: 100%;
-  height: 2px;
+  height: 1px;
   background: var(--dot-color);
   transform: translateY(-50%);
 }
 
 .c-request__dot {
-  width: 60%;
-  height: 60%;
+  width: 70%;
+  height: 70%;
   border-radius: 50%;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
+.c-request__dot:hover:before {
+  content: '';
+  position: absolute;
+  border: 0.5em solid transparent;
+  border-top: 0.7em solid #ffa60067;
+  pointer-events: none;
+  bottom: 100%;
+  left: 50%;
+  transform: translate(-50%);
+  z-index: 1
+}
+.c-request__dot:hover:after {
+  content: attr(data-name);
+  min-width: 6em;
+  position: absolute;
+  background: #ffa60067;
+  padding: 0.5em;
+  bottom: calc(100% + 1.2em);
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  pointer-events: none;
+}
+.c-request:first-child .c-request__dot:hover:after {
+  left: calc(0% - 0.3em);
+  transform: none;
+}
+.c-request:last-child .c-request__dot:hover:after {
+  left: auto;
+  right: 0;
+  transform: none;
+}
+
 .c-request__dot--active {
   background: var(--dot-color);
-}
-
-.c-request-name {
-  white-space: nowrap;
-  grid-column: span 2;
-  display: grid;
-  grid-template-columns: subgrid;
-}
-html:lang(en) .c-request-name {
-  font-size: 0.8em;
-}
-.c-request:nth-child(2) .c-request-name {
-  grid-column: 2 / span 2;
-}
-.c-request:nth-child(odd) .c-request-name {
-  grid-row: 3;
-}
-.c-request:nth-child(even) .c-request-name {
-  grid-row: 1
-}
-
-.c-request:last-child .c-request-name {
-  grid-column: span 1;
-}
-
-.c-request-name__inner {
-  grid-column: span 1;
-  justify-self: center;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-.c-request:first-child .c-request-name__inner {
-  /* justify-self: flex-start; */
-}
-.c-request:last-child .c-request-name__inner {
-  /* justify-self: flex-end; */
-}
-
-.c-request-name__arrow {
-  content: '';
-  border: 1px solid var(--dot-color);
-  border-width: 0 3px 3px 0;
-  display: inline-block;
-  width: 6px;
-  height: 6px;
-}
-.c-request:nth-child(odd) .c-request-name__arrow {
-  transform: rotate(-135deg);
-  margin-top: 0.2em;
-  order: -1;
-}
-.c-request:nth-child(even) .c-request-name__arrow {
-  transform: rotate(45deg);
-  margin-bottom: 0.2em;
 }
 
 :root {
